--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} {% endblock %}</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/beeswax-candle2.svg') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap-4.6.1-dist/css/bootstrap.min.css') }}">
 
     {% block customCSS %}
     {% endblock %}
@@ -14,6 +16,10 @@
 <body>
     {% block body %}
     {% endblock %}
+
+    <script src="{{ url_for('static', filename='lib/bootstrap-4.6.1-dist/js/jquery-3.6.0.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/bootstrap-4.6.1-dist/js/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/bootstrap-4.6.1-dist/js/bootstrap.min.js') }}"></script>
 
     {% block customJS %}
     {% endblock %}
