--- a/app/templates/body.html
+++ b/app/templates/body.html
@@ -2,8 +2,11 @@
 
 {% block body %}
 
-{% block container %}
+{% include './nav.html' %}
 
-{% endblock %}
+<div class="container py-3">
+    {% block container %}
+    {% endblock %}
+</div>
 
 {% endblock %}
