--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,5 +3,10 @@
 {% block title %} Index {% endblock %}
 
 {% block container%}
-<h1>Hola Mundo!</h1>
+<div class="row">
+    <div class="col-sm-12 col-md-12 col-lg-12 col-lx-12">
+        <h1>Hola Mundo!</h1>
+    </div>
+</div>
+
 {% endblock %}
